fix message width overflow

--- a/style.pcss
+++ b/style.pcss
@@ -54,14 +54,6 @@ textarea {
 	flex-grow: 1;
 	resize: vertical;
 }
-button {
-	min-width: 32px;
-	cursor: pointer;
-
-	&:hover {
-		color: var(--accent);
-	}
-}
 a {
 	color: var(--accent);
 	text-decoration: none;
@@ -377,7 +369,7 @@ a {
 		}
 		& .content {
 			display: flex;
-			max-width: 480px;
+			max-width: 100%;
 
 			& > div {
 				display: flex;
